--- a/src/com/cburch/LogisimFX/newgui/CircLogFrame/TimeLine.fxml
+++ b/src/com/cburch/LogisimFX/newgui/CircLogFrame/TimeLine.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cburch.LogisimFX.newgui.CircLogFrame.TimeLine"
+            fx:controller="com.cburch.LogisimFX.newgui.CircLogFrame.TimeLineController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
