--- a/src/LogisimFX/resources/default.templ
+++ b/src/LogisimFX/resources/default.templ
@@ -37,6 +37,7 @@
    <a name="labelloc" val="east" />
    <a name="output" val="true" />
   </tool>
+  <tool lib="0" name="Tunnel" />
   <tool lib="1" name="NOT Gate" />
   <tool lib="1" name="AND Gate" />
   <tool lib="1" name="OR Gate" />
